--- a/public/locales/zh-cn.json
+++ b/public/locales/zh-cn.json
@@ -1479,7 +1479,7 @@
     "Image Captioning": "图像描述",
     "Source": "来源",
     "Local": "本地",
-    "Multimodal (OpenAI / Anthropic / llama / Google)": "多模态（OpenAI / Anthropic / llama / Google）",
+    "Multimodal": "多模态",
     "Extras": "更多",
     "Horde": "Horde",
     "API": "API",
